@@ -177,6 +177,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Document “dpkg-query -l” abbreviated state information in the man page.
     Based on a patch by Marc-Jano Knopp <pub_br_debian.org@marc-jano.de>.
     Closes: #383869
+  * Honour LINGUAS environment variable when installing translated man pages.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
